<resources>
    <string name="app_name">PDemo_V1.6</string>
    <string name="open_serial_fail">打开串口失败！</string>
    <string name="isopenGpio">正在上电。。。</string>
    <string name="bankcard">银行卡</string>
    <string name="ordercard">定制卡</string>
    <string name="progcard">工程卡</string>
    <string name="getCardInfo">获取卡片信息</string>
    <string name="getCardInfoSuccess">获取卡片信息成功</string>
    <string name="getCardInfoFail">获取卡片信息失败</string>
    <string name="upGpioSuccess">上电成功！</string>
    <string name="inputOperation">输入操作指令</string>
    <string name="sendInstructuin">发送指令</string>
    <string name="resetICCard">复位IC卡</string>
    <string name="check_card_present">检测卡插入</string>
    <string name="deleteFile">删除文件</string>
    <string name="newMasterDir">新建主目录</string>
    <string name="newSubDir">新建子目录</string>
    <string name="newFolder">新建文件夹</string>
    <string name="selectedFile">选文件</string>
    <string name="readFile">读文件</string>
    <string name="writeFile">写文件</string>
    <string name="pleaseWriteData">请写数据</string>
    <string name="readData">读数据</string>
    <string name="continuReset">连续复位</string>
    <string name="success">成功：</string>
    <string name="fails">失败：</string>
    <string name="printerSettings">打印机参数设置</string>
    <string name="higher">倍高</string>
    <string name="widther">倍宽</string>
    <string name="Bold">加粗</string>
    <string name="Underline">下划线</string>
    <string name="align">对齐方式：</string>
    <string name="barcodeSetting">一维条码打印</string>
    <string-array name="barcodeType">
        <item>UPC-A</item>
        <item>EAN-8</item>
        <item>Code 39</item>
        <item>Code 128</item>
        <item>Codabar</item>
        <item>ITF</item>
    </string-array>
    <string name="print">打印</string>
    <string name="print_content">打印文本</string>
    <string name="pleaseEnterBarCode">请输入打印的条码</string>
    <string name="qrcodeSetting">二维条码打印</string>
    <string-array name="qrcodeType">
        <item>QR Code</item>
        <item>Aztec</item>
    </string-array>
    <string name="pleaseEnterQRCode">请输入打印的二维码</string>
    <string name="printFlashPic">打印图片</string>
    <string name="printPic">打印图片</string>
    <string name="selectImage">选择图片</string>
    <string name="pleaseEnter">请输入打印的内容</string>
    <string name="noData">没有数据</string>
    <string name="oneTrackData">一轨数据：</string>
    <string name="twoTrackData">二轨数据：</string>
    <string name="threeTrackData">三轨数据：</string>
    <string name="readFailure">读取失败</string>
    <string name="number_selection">数字选择</string>
    <string name="write_fail">写入失败!!</string>
    <string name="write_success">写入成功!!</string>
	<string name="title_activity_get_version">GetVersionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_uhfdetails">UHFDetailsActivity</string>
    <string name="title_activity_sfz">SFZActivity</string>
    <string name="title_activity_m1">M1Activity</string>
    <string name="title_activity_psam_card">PsamCardActivity</string>
    <string-array name="features">
        <item>指纹</item>
        <item>条码</item>
        <item>超高频</item>
        <item>接触式CPU卡</item>
        <item>非接触式CPU卡</item>
        <item>打印机</item>
        <item>磁条卡</item>
        <item>身份证</item>
        <item>M1卡</item>
        <item>stm32PSAM卡</item>
        <item>32555PSAM卡</item>
        <item>FBI指纹</item>
    </string-array>
    <string-array name="ic_cmd_value">
        <item>请选择IC卡操作指令</item>
        <item>删除文件</item>
        <item>建立 MF</item>
        <item>结束建立MF</item>
        <item>建立 DF</item>
        <item>结束建立 DF</item>
        <item>建立二进制</item>
        <item>选择二进制文件</item>
        <item>读二进制文件</item>
        <item>写二进制文件</item>
        <item>选中PBOC主目录</item>
        <item>获取随机数</item>
    </string-array>
    <string name="feature_settings">功能设置</string>
    <string name="check_version">检测版本</string>
    <string name="strApkVersion">apk版本：</string>
    <string name="strStmVersion">stm32版本：</string>
    <string name="str32550">32555版本：</string>
    <string name="version">版本</string>
    <string name="stop_connect">断开连接</string>
    <string name="fingerprint">指纹</string>
    <string name="loop_read">循环读取</string>
    <string name="barcode">Bar Code</string>
    <string name="rfid">RFID</string>
    <string name="pin">身份证</string>
    <string name="beidou">北斗</string>
    <string name="exit_toast">再按一次退出程序</string>
    <string name="read_sfz">读身份证</string>
    <string name="sequential_sfz">连续读取</string>
    <string name="stop">停止</string>
    <string name="clear_sfz">清空</string>
    <string name="read_card_success">读取成功</string>
    <string name="read_card_fail">读取失败</string>
    <string name="get_uid">获取UID</string>
    <string name="sfz_unfound_have_data">未寻到卡,有返回数据</string>
    <string name="sfz_time_out">未寻到卡,无返回数据，超时！！</string>
    <string name="sfz_other_error">可能是串口打开失败或其他异常</string>
    <string name="sfz_now_reading">正在读取数据...</string>
    <string name="sfz_error_code">错误码：</string>
    <string name="sfz_count_total">总共：</string>
    <string name="sfz_count_success">成功：</string>
    <string name="sfz_count_fail">  失败：</string>
    <string name="sfz_count_time_out">超时次数：</string>
    <string name="sfz_return">返回</string>
    <string name="print_finger">请按指纹！</string>
    <string name="print_finger_again">请再次按指纹！</string>
    <string name="processing">指纹采集成功，正在上传处理...</string>
    <string name="generate_char_fail">生成特征值失败！</string>
    <string name="reg_model_success">合成模板成功！</string>
    <string name="reg_model_fail">合成模板失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="verifying_wait">正在验证，请稍后...</string>
    <string name="down_char_fail">验证失败</string>
    <string name="verifying_through">验证通过</string>
    <string name="verifying_fail">验证失败</string>
    <string name="up_image_success">上传指纹图像成功</string>
    <string name="up_image_fail">上传指纹图像失败</string>
	<string name="clear_model">清除模板</string>
    <string name="id_model">ID:</string>
    <string name="clear_model_success">清除模板成功</string>
    <string name="clear_model_fail">清除模板成功</string>
    <string name="enter_id">请输入 ID</string>
    <string name="register3">注册</string>
    <string name="down_store">down and store</string>
    <string name="validate3">验证</string>
    <string name="down_store_success">下载存储成功</string>
    <string name="down_store_fail">下载存储失败</string>
    <string name="search_success">搜索成功</string>
    <string name="search_fail">搜索失败</string>
    <string name="down_store_null">模板不能为空</string>
    <string-array name="fingerprint_size">
        <item>小指纹</item>
        <item>大指纹</item>
    </string-array>
    <string name="card_number">卡号</string>
    <string name="read_card">读卡</string>
    <string name="write_card">写卡</string>
    <string name="write_password">密码：</string>
    <string name="update_password">修改密码</string>
    <string name="write_block_num">写入块号：</string>
    <string name="write_data">写入数据：</string>
    <string name="read_block_num">读入块号：</string>
    <string name="read_data">读入数据：</string>
    <string name="getcard_wait">正在获取卡号，请稍后...</string>
    <string name="updatepwding_wait">正在修改密码，请稍后...</string>
    <string name="writing_wait">正在写卡，请稍后...</string>
    <string name="reading_wait">正在读卡，请稍后...</string>
    <string name="writing_success">写卡成功</string>
    <string name="writing_fail">写卡失败</string>
    <string name="reading_success">读卡成功</string>
    <string name="reading_fail">读卡失败</string>
    <string name="card_to_area">请将卡放入读卡区</string>
    <string name="first_card">请先读卡，再验证指纹！</string>
    <string name="back">back</string>
    <string name="register_fingerprint">注册指纹</string>
    <string name="validate_fingerprint">验证指纹</string>
    <string name="clear_flash">清空指纹库</string>
    <string name="calibration">校准</string>
    <string name="calibration_success">校准成功</string>
    <string name="calibration_fail">校准失败</string>
    <string name="clear_flash_success">清空指纹库成功</string>
    <string name="clear_flash_fail">清空指纹库失败</string>
    <string name="first_register">请先注册指纹！</string>
    <string name="no_card_with_data">未寻到卡,有返回数据</string>
    <string name="no_card_without_data">未寻到卡,无返回数据，超时！！</string>
    <string name="find_card_exception">可能是串口打开失败或其他异常</string>
    <string name="write_data_toast">写入数据和块号不能为空</string>
    <string name="write_toast">写入时 块号、数据不能为空</string>
    <string name="read_toast">读入 时块号不能为空</string>
    <string name="str_conn">连接设备</string>
    <string name="str_do_conn">正在连接设备，请稍后...</string>
    <string name="power">功率：</string>
    <string name="update">修改</string>
    <string name="tab_read">标签读取</string>
    <string name="tab_write">标签写入</string>
    <string name="txt_tag_tit">选中标签:</string>
    <string name="txt_read_eare">读取区域:</string>
    <string name="txt_write_eare">写入区域:</string>
    <string name="txt_offset">偏移地址:</string>
    <string name="txt_length">数据长度:</string>
    <string name="txt_accesspwd">访问密码:</string>
    <string name="txt_null">N/A</string>
    <string name="txt_pwdzero">00000000</string>
    <string name="txt_ok">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="button_read">读取</string>
    <string name="button_detail">显示详情</string>
    <string name="button_write">写入</string>
    <string name="inventory_over">盘点结束</string>
    <string name="action_settings">Settings</string>
    <string name="button_open">开启</string>
    <string name="button_inv">搜索</string>
    <string name="txt_count">0000</string>
    <string name="info_connect_success">连接成功</string>
    <string name="info_antenna_fail">天线参数设置失败</string>
    <string name="info_connect_fail">连接失败</string>
    <string name="info_disconnect_success">断开成功</string>
    <string name="info_disconnect_fail">断开失败</string>
    <string name="info_inv_success">开始搜索标签</string>
    <string name="info_inv_fail">搜索标签启动失败</string>
    <string name="info_stopinv_success">停止搜索标签</string>
    <string name="info_stopinv_fail">搜索标签停止失败</string>
    <string name="info_no_sel_tag">未选择要操作的标签</string>
    <string name="info_readio_buzy">模块正在处理其他事务(如盘点),请稍后重试</string>
    <string name="info_oper_fail">操作失败</string>
    <string name="info_no_tags">未发现任何标签</string>
    <string name="info_tag_read_error">标签读取出错</string>
    <string name="info_write_length_zero">写入数据长度不允许为0</string>
    <string name="info_write_length_error">数据长度与实际要写入的数据长度不符(字符数必须为数据长度的4倍)</string>
    <string name="info_write_success">成功向标签写入数据</string>
    <string name="info_tag_write_error">标签写入出错</string>
    <string name="read_time">读取次数：</string>
    <string name="uhf_setting">设置</string>
	<string name="scan">扫码</string>
    <string name="scan_continue">连续扫码</string>
	<string name="setting">设置</string>
    <string name="complete">完成</string>
    <string name="settingEAK">设置EAK：</string>
    <string name="writeEAK">填写EAK</string>
    <string name="scan_data">data:</string>
    <string-array name="dbm">
        <item>18.0</item>
        <item>18.5</item>
        <item>19.0</item>
        <item>19.5</item>
        <item>20.0</item>
        <item>20.5</item>
        <item>21.0</item>
        <item>21.5</item>
        <item>22.0</item>
        <item>22.5</item>
        <item>23.0</item>
        <item>23.5</item>
        <item>24.0</item>
        <item>24.5</item>
        <item>25.0</item>
    </string-array>
    <string name="m1_title">M1卡功能演示Demo</string>
    <string name="m1_card_type">卡片类型：</string>
    <string name="m1_pwd">密码：</string>
    <string name="m1_type">密码类型：</string>
    <string name="printer_init">初始化</string>
    <string name="magstri_button_clean">清除</string>
    <string name="psam_select_type">请选择卡的类型：</string>
    <string name="psam_select_psam0">Psam 0</string>
    <string name="psam_select_psam1">Psam 1</string>
    <string name="psam_reset">复位</string>
    <string name="psam_get_random_number">获取随机数</string>
    <string name="psam_clear">清除</string>
</resources>