<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    <EditText 
        android:id="@+id/et_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="8"
        android:gravity="left|top"
        android:background="@null"/>
    <LinearLayout 
        android:id="@+id/ll_scaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >
      <Button
        android:id="@+id/scaning"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/scan_continue"
        android:textSize="20sp" />
    <Button
        android:id="@+id/stop_scaning"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textSize="20sp" />  
    <Button
        android:id="@+id/read_serial_port"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:text="check串口"
        android:visibility="gone"
        android:textSize="20sp" />  
        
    </LinearLayout>
    
    <EditText 
        android:id="@+id/et_str"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textNoSuggestions"
        android:hint="@string/scan_data"/>
    
    <Button
        android:id="@+id/scan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_scaning"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/scan"
        android:textSize="20sp" />

</RelativeLayout>