<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.authentication.eighthundred.activity.PsamCardStm32Activity" >

    <EditText
        android:id="@+id/psam_etshow"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:focusable="false"
        android:layout_margin="2dp"
        android:gravity="bottom|right"
        android:scrollbars="vertical"
        android:textColor="@color/green"
        android:background="@color/black" />

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
        <Button 
            android:id="@+id/psam_btreset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/psam_reset"
            />
        <Button 
            android:id="@+id/psam_getrandom"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/psam_get_random_number"
            />
        <Button 
            android:id="@+id/psam_clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/psam_clear"
            />
    </LinearLayout>
</LinearLayout>